PHPWhois 4.2.2~core1

	* Initial version imported from http://sourceforge.net/projects/phpwhois/, cleaned up, and Core-ified.
	-- Charlie Powell <charlie@eval.bz>  Mon, 29 Apr 2013 14:29:54 -0400
